[gd_scene load_steps=13 format=2]

[ext_resource path="res://Scripts/PpControl.gd" type="Script" id=1]
[ext_resource path="res://Images/ppL.png" type="Texture" id=2]
[ext_resource path="res://addons/smoothing/smoothing_2d.gd" type="Script" id=3]
[ext_resource path="res://Scripts/PpBody.gd" type="Script" id=4]
[ext_resource path="res://Scripts/Jiggler.gd" type="Script" id=5]
[ext_resource path="res://Images/ppNervousSpriteSheet.png" type="Texture" id=6]
[ext_resource path="res://Images/ppLNormalMap.png" type="Texture" id=7]
[ext_resource path="res://Images/ppNervousSpriteSheetNormalMap.png" type="Texture" id=8]

[sub_resource type="Animation" id=13]
resource_name = "Scared"
length = 0.8
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Smoothing2D/Visuals/Jiggler/Flip/Scared:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 6, 7 ]
}

[sub_resource type="OccluderPolygon2D" id=1]
cull_mode = 2
polygon = PoolVector2Array( -16, 10, 8, 10, 8, 4, 12, 2, 13, -4, 16, -6, 16, -10, 12, -13, -2, -13, -8, -10, -16, 2 )

[sub_resource type="RectangleShape2D" id=11]
extents = Vector2( 10, 5 )

[sub_resource type="CircleShape2D" id=12]

[node name="Pp" type="Node2D"]
z_index = 1
script = ExtResource( 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "Scared"
playback_speed = 1.6
anims/Scared = SubResource( 13 )

[node name="Tween" type="Tween" parent="."]

[node name="Smoothing2D" type="Node2D" parent="."]
script = ExtResource( 3 )
target = NodePath("../Body")

[node name="Camera2D" type="Camera2D" parent="Smoothing2D"]

[node name="Visuals" type="Node2D" parent="Smoothing2D"]

[node name="Jiggler" type="Node2D" parent="Smoothing2D/Visuals"]
script = ExtResource( 5 )

[node name="Flip" type="Node2D" parent="Smoothing2D/Visuals/Jiggler"]

[node name="LightOccluder2D" type="LightOccluder2D" parent="Smoothing2D/Visuals/Jiggler/Flip"]
occluder = SubResource( 1 )

[node name="Scared" type="Sprite" parent="Smoothing2D/Visuals/Jiggler/Flip"]
visible = false
light_mask = 2
scale = Vector2( 2, 2 )
texture = ExtResource( 6 )
normal_map = ExtResource( 8 )
offset = Vector2( 1, -4 )
hframes = 8
frame = 3

[node name="Idle" type="Sprite" parent="Smoothing2D/Visuals/Jiggler/Flip"]
light_mask = 2
position = Vector2( 0, -2 )
scale = Vector2( 2, 2 )
texture = ExtResource( 2 )
normal_map = ExtResource( 7 )

[node name="Body" type="KinematicBody2D" parent="." groups=[
"ppBody",
]]
visible = false
script = ExtResource( 4 )

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Body"]
position = Vector2( 0, 5 )
shape = SubResource( 11 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Body"]
shape = SubResource( 12 )
[connection signal="just_bounced" from="Body" to="." method="_on_Body_just_bounced"]
[connection signal="just_crouched" from="Body" to="." method="_on_Body_just_crouched"]
[connection signal="just_got_launched" from="Body" to="." method="_on_Body_just_got_launched"]
[connection signal="just_jumped" from="Body" to="." method="_on_Body_just_jumped"]
[connection signal="just_landed" from="Body" to="." method="_on_Body_just_landed"]
[connection signal="just_uncrouched" from="Body" to="." method="_on_Body_just_uncrouched"]
